# amphib

./: .env.example  .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  evaluator.py  github.py  install.sh  llm_utils.py  main.py  models.py  pdf.py  prompt.py  pymupdf_rag.py  pyproject.toml  requirements.txt  schemas.py  score.py  transform.py
cli/: __init__.py  analyze.py  evaluate.py  extract.py
core/: __init__.py  config.py  constants.py  parsers.py  prompt.py  schemas.py  types.py
core/prompts/: extract.jinja
core/providers/: base.py  chat.py  github.py
docs/: CNAME  _config.yml  architecture.html  build.py  cli.html  configuration.html  contributing.html  index.html  setup.html
docs/assets/css/: style.css
docs/templates/: architecture.jinja  base.jinja  cli.jinja  configuration.jinja  contributing.jinja  index.jinja  setup.jinja
prompts/: layout.jinja
providers/: chat.py  github.py
