[project]
name = "amphib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==25.9.0",
    "google-generativeai==0.4.0",
    "jinja2==3.1.6",
    "ollama==0.5.1",
    "pydantic==2.11.7",
    "pymupdf==1.26.3",
    "pymupdf4llm==0.0.27",
    "python-dotenv==1.0.1",
    "requests==2.32.4",
]

[dependency-groups]
dev = [
    "litellm>=1.91.0",
    "pydantic-settings>=2.14.2",
    "ruff>=0.15.20",
    "typer>=0.26.8",
]
